smaller channels box in landscape mode to prevent overlapping video controls

--- a/css/video.css
+++ b/css/video.css
@@ -155,7 +155,7 @@ button {
         bottom: 0;
         margin: auto;
         width: 80vw;
-        height: 80vh;
+        height: 70vh;
         border-radius: 3px;
     }
     #controls {
